--- a/styleh.css
+++ b/styleh.css
@@ -89,7 +89,7 @@
   }
   
   
-    h2{
+    h2,h3{
       font-family: Copperplate Gothic ;
       text-shadow: 2px 2px 5px rgb(104, 241, 35);
     }
