--- a/stylew.css
+++ b/stylew.css
@@ -38,11 +38,13 @@
     cursor: pointer;
     padding: 10px;
     width:fit-content;
-    border-radius: 10%;
-    background-color: rgb(2, 2, 3);
-    color: #f0e7e7;
+    border-radius: 10px;
+    background-color: rgb(254, 254, 255);
+    color: #000000;
     text-align: center;
     font-size: 15px;
+    font-family: Bahnschrift;
+    text-shadow: 2px 2px 8px rgb(0, 0, 0);
   }
   
   a:hover,.collapsible:hover {
