--- a/styleh.css
+++ b/styleh.css
@@ -6,16 +6,7 @@
   body{
     font-family: Arial;
     margin: 0;
-    background-color: rgb(0, 0, 0);
-  }
-  .nav{
-    width: 100%;
-    position: sticky;
-    margin-left:6%;
-    margin-top: 5%;
-    z-index: 1;
-    display: flex;
-    align-items:left;
+ 
   }
   
   
@@ -25,21 +16,22 @@
     flex-basis: 0%;
   }
   .logo img{
-  width: 150px;
+  width: 135px;
   }
   
   
   
   /* Change color on hover */
   
-  li a {
-    color:rgb(104, 241, 35);
-    
+  
+  li a:hover{
+    color: rgb(253, 253, 253);
+    background-color: rgb(73, 84, 213);
   }
   
-  li a.active {
-    color: white;
-    background-color: rgb(0, 0, 0);
+  a{
+    text-decoration: none;
+    border-radius: 5px;
   }
   
   /* felx content*/
@@ -51,50 +43,33 @@
   }
   
   .flex-container >div {
-    
-    width:fit-content;
     margin: 2%;
-    height: auto;
     text-align:center;
     padding:3%;
     
   }
   /* Main column */
   .card {
-    background-color: rgba(8, 8, 8, 0.564);
+    width:fit-content;
+    background-color: rgb(255, 255, 255);
     border-style:solid;
     border-width: 1px;
-    color:rgb(104, 241, 35);
-    border-color:rgb(104, 241, 35) ;
-    width: auto;
-    height: 20%;
+    color:rgb(77, 105, 206);
+    border-color:rgb(0, 0, 0) ;
     border-radius: 7px;
     }
-    .card{
-    animation-duration: 2s;
-    animation-name: slidein;
     
-  }
-  
-  @keyframes slidein {
-    from {
-      margin-left:8%;
-      
-    }
-  
-    to {
-      margin-left: 1%;
-      
-    }
-  }
   
   
-    h2,h3{
+   h2,h3{
       font-family: Copperplate Gothic ;
-      text-shadow: 2px 2px 5px rgb(104, 241, 35);
+     font-size: 20px;
     }
-  .card:hover,li a:hover,.logo:hover {
-    box-shadow: 0 15px 26px 1px rgb(12, 202, 168),0 17px 50px 0 rgba(0, 0, 0, 0.986);
+    h5{
+      font-size: 15px;
+    }
+  .card:hover,.logo:hover {
+    box-shadow: 0 2px 1px 0.25px rgb(25, 32, 31),0 5px 10px 0 rgba(0, 0, 0, 0.986);
   }
   
   a{
@@ -120,23 +95,17 @@
   .footer{
     padding: 15px;
     text-align: center;
-    background: #000000;
-    color: #e7e7e7;
+    background-color: #606b75;
+    color: #ffffff;
    width: 100%;
   }
   hr{
+    margin-top: 5%;
   width: 100%;
   
   }
   
   
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row, .navbar {   
-      flex-direction: column;
-      
-    }
-  }
   /* links */
   #a1{
     background-color:#e3f2fd;
@@ -144,15 +113,12 @@
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-family: Bahnschrift;
     text-shadow: 2px 2px 8px rgb(0, 0, 0);
   }
   #a1:hover{
-    box-shadow: 0 15px 26px 1px rgb(233, 231, 231),0 17px 50px 0 rgba(23, 23, 23, 0.986);
+    box-shadow: 0 5px 10px 1px rgb(233, 231, 231),0 5px 15px 0 rgba(23, 23, 23, 0.986);
   }
   
-  h5{
-    font-family: SimSun-ExtB;
-  }
+  
   
